--- a/.github/workflows/on-main-commit.yaml
+++ b/.github/workflows/on-main-commit.yaml
@@ -7,5 +7,5 @@ on:
 
 jobs:
   publish-docker-image:
-    uses: ./.github/workflows/publish-docker-image.yml
+    uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
