fix: update permissions

--- a/.github/workflows/on-main-commit.yaml
+++ b/.github/workflows/on-main-commit.yaml
@@ -9,3 +9,6 @@ jobs:
   publish-docker-image:
     uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
+    permissions:
+      contents: read
+      packages: write
