--- a/.github/workflows/on-new-tag.yaml
+++ b/.github/workflows/on-new-tag.yaml
@@ -9,5 +9,8 @@ jobs:
   publish-docker-image:
     uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
+    permissions:
+      contents: read
+      packages: write
     with:
       environment: docker-publish
