--- a/.github/workflows/on-main-commit.yaml
+++ b/.github/workflows/on-main-commit.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   publish-docker-image:
+    name: Publish Main Docker Image
     uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
     permissions:
