--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   build-and-push-image:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
     permissions:
@@ -29,7 +30,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@3
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
@@ -52,7 +53,7 @@ jobs:
             ghcr.io/${{ github.repository }}
 
       - name: Push to Registry(s)
-        uses: docker/build-push-action@5
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: false
