fix: set the images to publish

--- a/.github/workflows/on-main-commit.yaml
+++ b/.github/workflows/on-main-commit.yaml
@@ -13,3 +13,6 @@ jobs:
     permissions:
       contents: read
       packages: write
+    with:
+      images: |
+        ghcr.io/${{ github.repository }}
