--- a/.github/workflows/on-main-commit.yaml
+++ b/.github/workflows/on-main-commit.yaml
@@ -7,25 +7,25 @@ on:
 
 jobs:
 
-  generate-tags:
-    name: Generate Tags
-    runs-on: ubuntu-latest
-    outputs:
-      tag_date: ${{ steps.tag_date.outputs.tag_date }}
-      short_sha: ${{ steps.short_sha.outputs.short_sha }}
-    steps:
-      - name: Generate Tag Date
-        id: tag_date
-        run: echo "tag_date=$(date +'%Y%m%d')" >> "$GITHUB_OUTPUT"
-      - name: Generate Short SHA
-        id: short_sha
-        run: echo "short_sha=$(echo $GITHUB_SHA | cut -c1-7)" >> "$GITHUB_OUTPUT"
+#  generate-tags:
+#    name: Generate Tags
+#    runs-on: ubuntu-latest
+#    outputs:
+#      tag_date: ${{ steps.tag_date.outputs.tag_date }}
+#      short_sha: ${{ steps.short_sha.outputs.short_sha }}
+#    steps:
+#      - name: Generate Tag Date
+#        id: tag_date
+#        run: echo "tag_date=$(date +'%Y%m%d')" >> "$GITHUB_OUTPUT"
+#      - name: Generate Short SHA
+#        id: short_sha
+#        run: echo "short_sha=$(echo $GITHUB_SHA | cut -c1-7)" >> "$GITHUB_OUTPUT"
 
   publish-docker-image:
     name: Publish Main Docker Image
     uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
-    needs: generate-tags
+#    needs: generate-tags
     permissions:
       contents: read
       packages: write
@@ -33,5 +33,5 @@ jobs:
       images: |
         ghcr.io/${{ github.repository }}
       tags: |
-        type=raw,value=main-${{ needs.generate-tags.outputs.tag_date }}-${{ needs.generate-tags.outputs.short_sha }}
+        type=raw,value=main-$(date +'%Y%m%d')-$(echo $GITHUB_SHA | cut -c1-7)"
         type=raw,value=main-latest
