--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -1,9 +1,9 @@
-name: Pre-Release CI
+name: Release CI
 
 on:
   release:
     types:
-      - prereleased
+      - released
 
 jobs:
 
@@ -21,3 +21,4 @@ jobs:
         ghcr.io/${{ github.repository }}
       tags: |
         type=raw,value=${{ github.event.release.tag_name }}
+        type=raw,value=latest
