--- a/.github/workflows/publish-docker-image.yaml
+++ b/.github/workflows/publish-docker-image.yaml
@@ -57,11 +57,14 @@ jobs:
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@v4
+        env:
+          IMAGES: ${{ inputs.images || format('ghcr.io/{0}', github.repository) }}
+          TAGS: ${{ inputs.tags || format('type=raw,value={0}-{1}', github.ref, github.sha) }}
         with:
           # default to ghcr.io for workflow_dispatch
-          images: ${{ inputs.images || 'ghcr.io' + github.repository }}
+          images: ${{ inputs.images || format('ghcr.io/{0}', github.repository) }}
           # use the branch + sha if workflow_dispatch
-          tags: ${{ inputs.tags || 'type=raw,value=' + github.ref + '-' + github.sha  }}
+          tags: ${{ inputs.tags || format('type=raw,value={0}-{1}', github.ref, github.sha) }}
 
       - name: Push to Registry(s)
         uses: docker/build-push-action@v5
