--- a/.github/workflows/on-pre-release.yaml
+++ b/.github/workflows/on-pre-release.yaml
@@ -7,10 +7,21 @@ on:
 
 jobs:
 
+  verify-tag:
+    name: Verify Tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Verify Tag
+        if: !endsWith(github.event.release.tag_name, '-rc.*')
+        run: |
+          echo "Invalid RC tag. Please use the format vX.Y.Z-rc.N"
+          exit 1
+
   publish-docker-image:
     name: Publish Pre-Release Docker Image
     uses: ./.github/workflows/publish-docker-image.yaml
     secrets: inherit
+    needs: verify-tag
     permissions:
       contents: read
       packages: write
