--- a/.github/workflows/on-pre-release.yaml
+++ b/.github/workflows/on-pre-release.yaml
@@ -1,16 +1,15 @@
 name: Pre-Release CI
 
 on:
-  release:
-    types:
-      - prereleased
+  push:
+    tags:
+      - 'v*.*.*-rc.*'
 
 jobs:
 
   publish-docker-image:
     name: Publish Pre-Release Docker Image
     uses: ./.github/workflows/publish-docker-image.yaml
-    if: endsWith(github.event.release.tag_name, '-rc.*')
     secrets: inherit
     permissions:
       contents: read
