--- a/.github/workflows/on-pre-release.yaml
+++ b/.github/workflows/on-pre-release.yaml
@@ -20,4 +20,4 @@ jobs:
         ${{ github.repository }}
         ghcr.io/${{ github.repository }}
       tags: |
-        type=raw,value=${{ github.event.release.tag_name }}
+        type=raw,value=${{ github.ref_name }}
