--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -16,7 +16,7 @@ jobs:
           node-version: '20'
       - name: Validate Tag
         run: |
-          node -e "if (!/^v\d+\.\d+\.\d+$/.test(${{ github.ref_name }})) { console.error('Invalid version provided');process.exit(1);}"
+          node -e "if (v\d+\.\d+\.\d+$/.test('${{ github.ref_name }}')) { console.error('Invalid version provided');process.exit(1);}"
 
   publish-docker-image:
     name: Publish Pre-Release Docker Image
