--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -4,9 +4,10 @@ on:
   push:
     tags:
       - 'v*.*.*'
+    tags-ignore:
+      - 'v*.*.*-rc.*'
 
 jobs:
-
   validate-tag:
     runs-on: ubuntu-latest
     steps:
@@ -15,9 +16,16 @@ jobs:
         with:
           node-version: '20'
       - name: Validate Tag
+      # Ensure the tag is a valid version
         run: |
-          node -e "if (!/^v\d+\.\d+\.\d+$/.test('${{ github.ref_name}}')) { console.error('Invalid version provided');process.exit(1);}"
-
+          node -e "if (!/^v\d+\.\d+\.\d+$/.test('${{ github.ref_name }}')) { console.error('Invalid version provided');process.exit(1);}"
+      # Ensure the tag matches the VERSION file
+      - name: Validate VERSION
+        run: |
+          if [ "$(cat cmd/thor/VERSION)" != "${{ github.ref_name }}" ]; then
+            echo "VERSION file does not match tag"
+            exit 1
+          fi
   publish-docker-image:
     name: Publish Pre-Release Docker Image
     uses: ./.github/workflows/publish-docker-image.yaml
