--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -10,6 +10,10 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     steps:
+
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v3
         with:
@@ -21,7 +25,7 @@ jobs:
 
       - name: Validate VERSION
         run: |
-          if [ "$(cat cmd/thor/VERSION)" != "${{ github.ref_name }}" ]; then
+          if [ "$(cat cmd/thor/VERSION" != "${{ github.ref_name }}" ]; then
             echo "VERSION file does not match tag"
             exit 1
           fi
