--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -39,6 +39,13 @@ jobs:
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /repos/${{ github.repository }}/git/ref/tags/${{ github.ref_name }})
           prerelease=$(echo "$response" | jq -r '.prerelease')
+
+          echo "$response" | jq 
+
+          prerelease=$(echo "$response" | jq -r '.prerelease')
+
+          echo "Prerelease: $prerelease"
+
           if [ "$prerelease" != "false" ]; then
             echo "Tag is not an official release"
             exit 1
