fix: check is pre release

--- a/.github/workflows/on-pre-release.yaml
+++ b/.github/workflows/on-pre-release.yaml
@@ -11,6 +11,9 @@ jobs:
     name: Validate Tag
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Validate Tag
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
