--- a/.github/workflows/on-pre-release.yaml
+++ b/.github/workflows/on-pre-release.yaml
@@ -18,14 +18,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          response=$(gh release view ${{ github.ref_name }} --json isPrerelease)
-
-          echo "$response" | jq 
-
-          prerelease=$(echo "$response" | jq -r '.isPrerelease')
-
-          echo "Prerelease: $prerelease"
-
+          prerelease=$(gh release view ${{ github.ref_name }} --json isPrerelease | jq -r '.isPrerelease')
           if [ "$prerelease" != "true" ]; then
             echo "Tag is not a pre-release"
             exit 1
