fix: uydate workflow dispatch tag name

--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -9,8 +9,8 @@ on:
 jobs:
   validate:
     runs-on: ubuntu-latest
+    name: Validate Release
     steps:
-
       - name: Checkout
         uses: actions/checkout@v4
 
