--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -26,7 +26,9 @@ jobs:
       - name: Validate VERSION
         run: |
           version=$(cat cmd/thor/VERSION)
-          if [ endsWith(${{ github.ref_name }}, $version) ]; then
+          tag="${{ github.ref_name }}"
+          tag="${tag#v}"  # Remove the "v" prefix from the tag
+          if [ "$tag" != "$version" ]; then
             echo "VERSION file does not match tag"
             exit 1
           fi
