--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -28,6 +28,8 @@ jobs:
           version=$(cat cmd/thor/VERSION)
           tag="${{ github.ref_name }}"
           tag="${tag#v}"  # Remove the "v" prefix from the tag
+          echo $tag
+          echo $version
           if [ "$tag" != "$version" ]; then
             echo "VERSION file does not match tag"
             exit 1
